src/styles.scss
$cover-border-size: 12px;

:root {
  --paper: #fdfcf8;
}

.theme-ebony {
  --bg: #0f0f12;
  --text: #f4f4f4;
  --header: #ffffff;
  --primary: #c5a059;
  --secondary: #8e9196;
  --sec-cont: #2a2c31;
  --error: #af4c4c;
  --warn: #c98b39;
  --success: #6b8e23;
}

.theme-parchment {
  --bg: #c9c4b9;
  --text: #45423d;
  --header: #2d2b28;
  --primary: #8b4513;
  --secondary: #5d6066;
  --sec-cont: #b7b2a7;
  --error: #800000;
  --warn: #a0522d;
  --success: #7ca38a;
}

html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  font-family: 'Georgia', serif;

  input {
    font-family: 'Georgia', serif;
  }

  * {
    box-sizing: border-box;
  }
}

.theme-container {
  height: 100%;
  padding: 1rem;
}

.piece-cover {
  height: 100%;
  padding: 1rem 3rem;
  border: double $cover-border-size var(--text);
  background: url('./assets/violin-empty.svg') no-repeat top right scroll;
}

@media (min-width: 768px) {
  .piece-cover::before {
    content: '';
    position: absolute;
    inset: calc(1rem + $cover-border-size);
    background: url('./assets/violin-empty.svg') no-repeat top right scroll;
    transform: scaleX(-1);
  }
}

h1 {
  text-align: center;
  font-style: italic;
  font-size: 2.5rem;
  margin-top: 0;
}

h2 {
  font-weight: 300;
  text-transform: uppercase;
}

.label {
  letter-spacing: 2px;
  text-transform: uppercase;
  font-size: 0.9rem;
  margin-bottom: 0;
}

.divider {
  height: 1px;
  width: 120px;
  margin: 2rem auto;
}

.theme-ebony,
.theme-parchment {
  background-color: var(--bg);
  color: var(--text);

  h1 {
    font-style: italic;
    color: var(--header);
  }

  .divider {
    background-color: var(--text);
  }

  .btn-primary {
    background-color: var(--primary);
    color: var(--bg);

    border: none;
    padding: 1rem 2rem;
    font-weight: bold;
    cursor: pointer;
  }

  .text-error {
    color: var(--error);
  }
  .text-warn {
    color: var(--warn);
  }
}

